@@ -144,3 +144,4 @@ v 1.9:
 	- A command of '/manload' with no world arguments now performs a full reload of GM.
 	- Update for Bukkit R5 compatability.
 	- Removed BukkitPermsOverride as this is now the default with bukkit handling child nodes.
+	- Prevent adding inheritances to globalgroups. These are permissions collections, not player groups.
